# CERBERUS-UnitreeGo2CompanionAPI

./: .env.example  .gitignore  CONTRIBUTING.md  Changelog.md  Dockerfile  LICENSE  Makefile  README.md  Readme.md  Vision_Document.md  __init__.py  architecture.md  behavior_engine.py  bridge.py  buttplug_plugin.py  cerberus.yaml  cerberus_ui.py  ci.yml  cli.py  cognitive.py  conftest.py  data_logger.py  docker-compose.yml  engine.py  event_bus.py  funscript_plugin.py  galaxy_fit2_plugin.py  gate.py  go2_bridge.py  go2_companion_ui.html  go2_webrtc.py  hello_world.py  hismith_plugin.py  index.html  interpreter.py  logging_config.py  main.py  manager.py  model.py  pipeline.py  (+17 more)
.github/workflows/: nodejs.yml  python-package.yml
Docs/: API_V1_CONTRACT.md  PLUGIN_EXECUTION.md  SDK_IMPORT_EXPECTED.md
api/: routes_plugins.py  routes_robot.py  ws.py
app/: main.py
backend/: main.py
backend/behavior_tree/: behavior_tree.py
backend/cli/: go2_cli.py
backend/core/: fleet_and_ota.py  integration.py  platform_extensions.py  plugin_system.py  security.py
backend/i18n/: localization.py
backend/static/: dashboard.html
cerberus/: __init__.py  runtime.py
cerberus/anatomy/: kinematics.py  payload.py
cerberus/api/: __init__.py
cerberus/body/: anatomy.py
cerberus/bridge/: go2_bridge.py  mujoco_bridge.py  ros2_bridge.py
cerberus/cli/: __init__.py
cerberus/cognitive/: behavior_engine.py  mind.py  session_store.py
cerberus/core/: auth.py  engine.py  safety.py
cerberus/data/: logging_pipeline.py
cerberus/docs/: ARCHITECTURE.md
cerberus/learning/: __init__.py  adaptation.py  environment.py  rewards.py  trainer.py
cerberus/perception/: pipeline.py
cerberus/personality/: engine.py
cerberus/plugins/: cerberus_plugins.py  plugin_manager.py
go2_platform/backend/api/: server.py
go2_platform/backend/core/: platform.py  security.py
go2_platform/config/: platform_config.yaml
go2_platform/tests/: test_platform.py
go2_platform_final/go2_platform/: CONTRIBUTING.md  requirements.txt
go2_platform_final/go2_platform/backend/animation/: animation_system.py
go2_platform_final/go2_platform/backend/api/: server.py
go2_platform_final/go2_platform/backend/core/: platform.py
go2_platform_final/go2_platform/backend/observability/: metrics.py
go2_platform_final/go2_platform/backend/ros2_bridge/: bridge_node.py
go2_platform_final/go2_platform/backend/sim/: simulation_engine.py
go2_platform_final/go2_platform/docs/research/: ARCHITECTURE_RESEARCH.md
go2_platform_final/go2_platform/plugins/examples/: plugins_examples.py
logs/: personality_session.json  safety_audit.jsonl
plugins/examples/perception_plugin/: plugin.py
plugins/limb_loss_recovery/: plugin.py
plugins/stair_climber/: plugin.py
plugins/terrain_arbiter/: plugin.py
plugins/undercarriage_payload/: README.md  config.json  plugin.py
plugins/voice_nlu/: plugin.py
schemas/: execute.request.schema.json  execute.response.schema.json
scripts/: hardware_check.py
scripts/systemd/: cerberus.service
tests/: conftest.py  test_all.py  test_cerberus.py  test_infrastructure.py  test_integration.py  test_learning.py  test_limb_loss.py  test_payload.py  test_platform.py  test_plugin_compatibility.py  test_plugin_safety.py  test_stair_climber.py  test_terrain_arbiter.py  test_voice_mujoco.py
ui/: index.html
