[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "cerberus-go2"
version     = "2.0.0"
description = "Intelligent quadrupedal robotics platform for the Unitree Go2 PRO/AIR"
readme      = "Readme.md"
license     = { text = "MIT" }
requires-python = ">=3.11"
authors     = [{ name = "CERBERUS Contributors" }]
keywords    = ["robotics", "unitree", "go2", "quadruped", "haptics", "webrtc"]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "aiortc>=1.9.0",
    "bleak>=0.21.0",
    "buttplug>=1.0.0",
    "dearpygui>=1.11.0",
    "pyyaml>=6.0.1",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
vision = ["ultralytics>=8.0.0", "mediapipe>=0.10.0", "opencv-python>=4.9.0"]
dev    = ["pytest>=8.1.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0", "ruff>=0.4.0"]

[project.scripts]
cerberus      = "main:main"
cerberus-api  = "backend.api.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cerberus*", "plugins*", "ui*", "backend*"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "UP007", "B027", "SIM117"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
