[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerberus-go2"
version = "2.8.0"
description = "CERBERUS — Canine-Emulative Responsive Behavioral Engine & Reactive Utility System for the Unitree Go2"
readme = "Readme.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "CERBERUS Contributors" }]
keywords = ["robotics", "unitree", "go2", "quadruped", "companion", "ai", "behavior"]

dependencies = [
    "fastapi>=0.111.0,<0.200.0",
    "uvicorn[standard]>=0.29.0,<0.35.0",
    "pydantic>=2.7.0,<3.0.0",
    "websockets>=12.0,<14.0",
    "aiohttp>=3.9.0,<4.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0,<2.1.0",
]

[project.optional-dependencies]
vision = [
    "ultralytics>=8.2.0",
    "mediapipe>=0.10.0",
    "opencv-python>=4.9.0",
]
sim = [
    "mujoco>=3.1.0",
]
mujoco = [
    "mujoco>=3.1.0",
]
voice = [
    "openai-whisper>=20231117",
    "sounddevice>=0.4.6",
    "torch>=2.0.0",
    "numpy>=1.26.0",
]
ble = ["bleak>=0.21.0"]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "asgi-lifespan>=2.1.0",
    "ruff>=0.4.0",
]
all = [
    "cerberus-go2[vision,mujoco,voice,ble,dev]",
]

[project.scripts]
cerberus       = "backend.main:main"
cerberus-sim   = "backend.main:main"  # Same entrypoint; set GO2_SIMULATION=true

[project.urls]
Repository = "https://github.com/therealwestninja/CERBERUS-UnitreeGo2CompanionAPI"

[tool.setuptools.packages.find]
where = ["."]
include = ["cerberus*", "backend*", "plugins*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "B007"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
